src/test/compile-fail/import-loop.rs
// error-pattern:import

import y::x;

mod y {
    import x;
    export x;
}

fn main() { }
